Refactor UI components for improved readability and consistency
- Adjusted formatting in `RecentSessionsInner` and `UpcomingAppointmentsInner` for better code clarity.
- Updated class names in various components to maintain a consistent order and improve readability.
- Enhanced error handling in API routes by standardizing Sentry logging practices.
- Refactored multiple sections in the expert application content to ensure consistent styling and structure across the application.

--- a/src/content/become-expert/es.mdx
+++ b/src/content/become-expert/es.mdx
@@ -1,19 +1,21 @@
 export const metadata = {
-  title: "Únete como Especialista | Eleva Care",
-  description: "Únete a Eleva Care como profesional de la salud independiente. Establece tus propias tarifas, gestiona tu agenda y presta atención a través de nuestra plataforma segura.",
+  title: 'Únete como Especialista | Eleva Care',
+  description:
+    'Únete a Eleva Care como profesional de la salud independiente. Establece tus propias tarifas, gestiona tu agenda y presta atención a través de nuestra plataforma segura.',
   og: {
-    title: "Únete como Especialista | Eleva Care",
-    description: "Únete a Eleva Care como profesional de la salud independiente y licenciado. Establece tus tarifas y presta atención a través de nuestra plataforma segura.",
-    siteName: "Eleva Care"
-  }
+    title: 'Únete como Especialista | Eleva Care',
+    description:
+      'Únete a Eleva Care como profesional de la salud independiente y licenciado. Establece tus tarifas y presta atención a través de nuestra plataforma segura.',
+    siteName: 'Eleva Care',
+  },
 };
 
-import HeroSection from '@/components/sections/become-expert/HeroSection';
 import BenefitsSection from '@/components/sections/become-expert/BenefitsSection';
 import ExpertPricingSection from '@/components/sections/become-expert/ExpertPricingSection';
+import FinalCTASection from '@/components/sections/become-expert/FinalCTASection';
+import HeroSection from '@/components/sections/become-expert/HeroSection';
 import HowItWorksSection from '@/components/sections/become-expert/HowItWorksSection';
 import RequirementsSection from '@/components/sections/become-expert/RequirementsSection';
-import FinalCTASection from '@/components/sections/become-expert/FinalCTASection';
 import { Sparkles, TrendingUp } from 'lucide-react';
 
 <HeroSection
@@ -32,32 +34,38 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     {
       icon: 'shield',
       title: 'Independencia Clínica Total',
-      description: 'Eres un profesional independiente con autonomía clínica completa. Tú decides cómo atender a tus clientes—Eleva.care solo proporciona la plataforma tecnológica.',
+      description:
+        'Eres un profesional independiente con autonomía clínica completa. Tú decides cómo atender a tus clientes—Eleva.care solo proporciona la plataforma tecnológica.',
     },
     {
       icon: 'dollar',
       title: 'Establece tus Propias Tarifas',
-      description: 'Tú decides cuánto vale tu tiempo. Conserva el 80% de tus ganancias y recibe pagos semanales mediante procesamiento seguro.',
+      description:
+        'Tú decides cuánto vale tu tiempo. Conserva el 80% de tus ganancias y recibe pagos semanales mediante procesamiento seguro.',
     },
     {
       icon: 'calendar',
       title: 'Horario Flexible',
-      description: 'Controla completamente tu calendario. Trabaja tanto o tan poco como quieras, cuando quieras.',
+      description:
+        'Controla completamente tu calendario. Trabaja tanto o tan poco como quieras, cuando quieras.',
     },
     {
       icon: 'video',
       title: 'Videoconsultas Seguras',
-      description: 'Realiza sesiones desde cualquier lugar en nuestra plataforma cifrada y conforme con RGPD. Solo necesitas un ordenador y conexión a internet.',
+      description:
+        'Realiza sesiones desde cualquier lugar en nuestra plataforma cifrada y conforme con RGPD. Solo necesitas un ordenador y conexión a internet.',
     },
     {
       icon: 'users',
       title: 'Alcanza Más Clientes',
-      description: 'Sé descubierto por clientes que buscan servicios de salud femenina a través de nuestra plataforma. Enfócate en la atención, no en marketing.',
+      description:
+        'Sé descubierto por clientes que buscan servicios de salud femenina a través de nuestra plataforma. Enfócate en la atención, no en marketing.',
     },
     {
       icon: 'trending',
       title: 'Herramientas Profesionales',
-      description: 'Gestión de clientes, facturación automática, páginas de reserva y analíticas—todo lo que necesitas para gestionar tu práctica independiente.',
+      description:
+        'Gestión de clientes, facturación automática, páginas de reserva y analíticas—todo lo que necesitas para gestionar tu práctica independiente.',
     },
   ]}
 />
@@ -67,7 +75,8 @@ import { Sparkles, TrendingUp } from 'lucide-react';
   steps={[
     {
       title: 'Crea tu Perfil',
-      description: 'Comparte tu experiencia, credenciales y disponibilidad. Dile a los clientes qué te hace único.',
+      description:
+        'Comparte tu experiencia, credenciales y disponibilidad. Dile a los clientes qué te hace único.',
     },
     {
       title: 'Establece tus Servicios y Tarifas',
@@ -75,16 +84,17 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     },
     {
       title: 'Sé Descubierto',
-      description: 'Los clientes te encuentran a través de búsquedas y recomendaciones. Comienza a recibir solicitudes de reserva.',
+      description:
+        'Los clientes te encuentran a través de búsquedas y recomendaciones. Comienza a recibir solicitudes de reserva.',
     },
     {
       title: 'Proporciona tu Servicio',
-      description: 'Realiza sesiones, ayuda a los clientes a alcanzar sus objetivos y construye tu reputación a través de reseñas.',
+      description:
+        'Realiza sesiones, ayuda a los clientes a alcanzar sus objetivos y construye tu reputación a través de reseñas.',
     },
   ]}
   ctaButton="Comienza tu Viaje"
 />
-
 
 <ExpertPricingSection
   title="Precios Flexibles para Cada Experto"
@@ -239,29 +249,32 @@ import { Sparkles, TrendingUp } from 'lucide-react';
   note="Cancela o cambia de plan en cualquier momento. No se requieren contratos a largo plazo. Todos los planes incluyen soporte de plataforma, procesamiento seguro de pagos y herramientas de gestión de clientes."
 />
 
-
 <RequirementsSection
   title="Requisitos para Unirte"
   requirements={[
     {
       icon: 'badge',
       title: 'Licencia Profesional Válida',
-      description: 'Licencia o certificación activa en tu campo de la salud. Autocertificas tus credenciales y eres responsable de tu estatus profesional.',
+      description:
+        'Licencia o certificación activa en tu campo de la salud. Autocertificas tus credenciales y eres responsable de tu estatus profesional.',
     },
     {
       icon: 'shield',
       title: 'Seguro de Responsabilidad Profesional',
-      description: 'Cobertura de responsabilidad civil profesional o mala praxis adecuada para tu área de práctica.',
+      description:
+        'Cobertura de responsabilidad civil profesional o mala praxis adecuada para tu área de práctica.',
     },
     {
       icon: 'globe',
       title: 'Internet y Equipo Fiable',
-      description: 'Conexión a internet estable y entorno adecuado para videoconsultas profesionales.',
+      description:
+        'Conexión a internet estable y entorno adecuado para videoconsultas profesionales.',
     },
     {
       icon: 'heart',
       title: 'Compromiso con la Calidad',
-      description: 'Dedicación a prácticas basadas en evidencia y a ofrecer una atención excelente a tus clientes.',
+      description:
+        'Dedicación a prácticas basadas en evidencia y a ofrecer una atención excelente a tus clientes.',
     },
   ]}
 />
