--- a/src/content/become-expert/pt-BR.mdx
+++ b/src/content/become-expert/pt-BR.mdx
@@ -1,19 +1,21 @@
 export const metadata = {
-  title: "Seja um Especialista | Eleva Care",
-  description: "Junte-se à Eleva Care como profissional de saúde independente. Defina suas próprias tarifas, gerencie sua agenda e preste cuidados através da nossa plataforma segura.",
+  title: 'Seja um Especialista | Eleva Care',
+  description:
+    'Junte-se à Eleva Care como profissional de saúde independente. Defina suas próprias tarifas, gerencie sua agenda e preste cuidados através da nossa plataforma segura.',
   og: {
-    title: "Seja um Especialista | Eleva Care",
-    description: "Junte-se à Eleva Care como profissional de saúde independente e licenciado. Defina suas tarifas e preste cuidados através da nossa plataforma segura.",
-    siteName: "Eleva Care"
-  }
+    title: 'Seja um Especialista | Eleva Care',
+    description:
+      'Junte-se à Eleva Care como profissional de saúde independente e licenciado. Defina suas tarifas e preste cuidados através da nossa plataforma segura.',
+    siteName: 'Eleva Care',
+  },
 };
 
-import HeroSection from '@/components/sections/become-expert/HeroSection';
 import BenefitsSection from '@/components/sections/become-expert/BenefitsSection';
-import HowItWorksSection from '@/components/sections/become-expert/HowItWorksSection';
 import ExpertPricingSection from '@/components/sections/become-expert/ExpertPricingSection';
-import RequirementsSection from '@/components/sections/become-expert/RequirementsSection';
 import FinalCTASection from '@/components/sections/become-expert/FinalCTASection';
+import HeroSection from '@/components/sections/become-expert/HeroSection';
+import HowItWorksSection from '@/components/sections/become-expert/HowItWorksSection';
+import RequirementsSection from '@/components/sections/become-expert/RequirementsSection';
 import { Sparkles, TrendingUp } from 'lucide-react';
 
 <HeroSection
@@ -32,32 +34,38 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     {
       icon: 'shield',
       title: 'Total Independência Clínica',
-      description: 'Você é um profissional independente com total autonomia clínica. Você decide como cuidar dos seus clientes—a Eleva.care apenas fornece a plataforma tecnológica.',
+      description:
+        'Você é um profissional independente com total autonomia clínica. Você decide como cuidar dos seus clientes—a Eleva.care apenas fornece a plataforma tecnológica.',
     },
     {
       icon: 'dollar',
       title: 'Defina Suas Próprias Tarifas',
-      description: 'Você decide quanto vale seu tempo. Mantenha 80% dos seus ganhos e receba pagamentos semanais através de processamento seguro.',
+      description:
+        'Você decide quanto vale seu tempo. Mantenha 80% dos seus ganhos e receba pagamentos semanais através de processamento seguro.',
     },
     {
       icon: 'calendar',
       title: 'Horário Flexível',
-      description: 'Controle completamente seu calendário. Trabalhe tanto ou tão pouco quanto quiser, quando quiser.',
+      description:
+        'Controle completamente seu calendário. Trabalhe tanto ou tão pouco quanto quiser, quando quiser.',
     },
     {
       icon: 'video',
       title: 'Videoconsultas Seguras',
-      description: 'Realize sessões de qualquer lugar na nossa plataforma criptografada e em conformidade com LGPD. Tudo que você precisa é de um computador e conexão à internet.',
+      description:
+        'Realize sessões de qualquer lugar na nossa plataforma criptografada e em conformidade com LGPD. Tudo que você precisa é de um computador e conexão à internet.',
     },
     {
       icon: 'users',
       title: 'Alcance Mais Clientes',
-      description: 'Seja descoberto por clientes que buscam serviços de saúde feminina através da nossa plataforma. Foque nos cuidados, não em marketing.',
+      description:
+        'Seja descoberto por clientes que buscam serviços de saúde feminina através da nossa plataforma. Foque nos cuidados, não em marketing.',
     },
     {
       icon: 'trending',
       title: 'Ferramentas Profissionais',
-      description: 'Gestão de clientes, faturamento automático, páginas de agendamento e analytics—tudo que você precisa para gerenciar sua prática independente.',
+      description:
+        'Gestão de clientes, faturamento automático, páginas de agendamento e analytics—tudo que você precisa para gerenciar sua prática independente.',
     },
   ]}
 />
@@ -67,7 +75,8 @@ import { Sparkles, TrendingUp } from 'lucide-react';
   steps={[
     {
       title: 'Crie Seu Perfil',
-      description: 'Compartilhe sua experiência, credenciais e disponibilidade. Diga aos clientes o que te torna único.',
+      description:
+        'Compartilhe sua experiência, credenciais e disponibilidade. Diga aos clientes o que te torna único.',
     },
     {
       title: 'Defina Seus Serviços e Tarifas',
@@ -75,16 +84,17 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     },
     {
       title: 'Seja Descoberto',
-      description: 'Os clientes te encontram através de buscas e recomendações. Comece a receber pedidos de reserva.',
+      description:
+        'Os clientes te encontram através de buscas e recomendações. Comece a receber pedidos de reserva.',
     },
     {
       title: 'Forneça Seu Serviço',
-      description: 'Realize sessões, ajude os clientes a alcançar seus objetivos e construa sua reputação através de avaliações.',
+      description:
+        'Realize sessões, ajude os clientes a alcançar seus objetivos e construa sua reputação através de avaliações.',
     },
   ]}
   ctaButton="Comece sua Jornada"
 />
-
 
 <ExpertPricingSection
   title="Preços Flexíveis para Cada Especialista"
@@ -239,29 +249,32 @@ import { Sparkles, TrendingUp } from 'lucide-react';
   note="Cancele ou mude de plano a qualquer momento. Não são necessários contratos de longo prazo. Todos os planos incluem suporte da plataforma, processamento seguro de pagamentos e ferramentas de gestão de clientes."
 />
 
-
 <RequirementsSection
   title="Requisitos para Participar"
   requirements={[
     {
       icon: 'badge',
       title: 'Licença Profissional Válida',
-      description: 'Licença ou certificação ativa na sua área de saúde. Você autocertifica suas credenciais e é responsável pelo seu status profissional.',
+      description:
+        'Licença ou certificação ativa na sua área de saúde. Você autocertifica suas credenciais e é responsável pelo seu status profissional.',
     },
     {
       icon: 'shield',
       title: 'Seguro de Responsabilidade Profissional',
-      description: 'Cobertura de responsabilidade civil profissional ou erro médico adequada à sua área de atuação.',
+      description:
+        'Cobertura de responsabilidade civil profissional ou erro médico adequada à sua área de atuação.',
     },
     {
       icon: 'globe',
       title: 'Internet e Equipamento Confiáveis',
-      description: 'Conexão à internet estável e ambiente adequado para videoconsultas profissionais.',
+      description:
+        'Conexão à internet estável e ambiente adequado para videoconsultas profissionais.',
     },
     {
       icon: 'heart',
       title: 'Compromisso com a Qualidade',
-      description: 'Dedicação a práticas baseadas em evidência e a prestar cuidados de excelência aos seus clientes.',
+      description:
+        'Dedicação a práticas baseadas em evidência e a prestar cuidados de excelência aos seus clientes.',
     },
   ]}
 />
