--- a/src/content/become-expert/pt.mdx
+++ b/src/content/become-expert/pt.mdx
@@ -1,19 +1,21 @@
 export const metadata = {
-  title: "Junte-se como Especialista | Eleva Care",
-  description: "Junte-se à Eleva Care como profissional de saúde independente. Defina as suas próprias tarifas, gira a sua agenda e preste cuidados através da nossa plataforma segura.",
+  title: 'Junte-se como Especialista | Eleva Care',
+  description:
+    'Junte-se à Eleva Care como profissional de saúde independente. Defina as suas próprias tarifas, gira a sua agenda e preste cuidados através da nossa plataforma segura.',
   og: {
-    title: "Junte-se como Especialista | Eleva Care",
-    description: "Junte-se à Eleva Care como profissional de saúde independente e licenciado. Defina as suas tarifas e preste cuidados através da nossa plataforma segura.",
-    siteName: "Eleva Care"
-  }
+    title: 'Junte-se como Especialista | Eleva Care',
+    description:
+      'Junte-se à Eleva Care como profissional de saúde independente e licenciado. Defina as suas tarifas e preste cuidados através da nossa plataforma segura.',
+    siteName: 'Eleva Care',
+  },
 };
 
-import HeroSection from '@/components/sections/become-expert/HeroSection';
 import BenefitsSection from '@/components/sections/become-expert/BenefitsSection';
-import HowItWorksSection from '@/components/sections/become-expert/HowItWorksSection';
 import ExpertPricingSection from '@/components/sections/become-expert/ExpertPricingSection';
-import RequirementsSection from '@/components/sections/become-expert/RequirementsSection';
 import FinalCTASection from '@/components/sections/become-expert/FinalCTASection';
+import HeroSection from '@/components/sections/become-expert/HeroSection';
+import HowItWorksSection from '@/components/sections/become-expert/HowItWorksSection';
+import RequirementsSection from '@/components/sections/become-expert/RequirementsSection';
 import { Sparkles, TrendingUp } from 'lucide-react';
 
 <HeroSection
@@ -32,32 +34,38 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     {
       icon: 'shield',
       title: 'Total Independência Clínica',
-      description: 'É um profissional independente com total autonomia clínica. Decide como cuidar dos seus clientes—a Eleva.care apenas fornece a plataforma tecnológica.',
+      description:
+        'É um profissional independente com total autonomia clínica. Decide como cuidar dos seus clientes—a Eleva.care apenas fornece a plataforma tecnológica.',
     },
     {
       icon: 'dollar',
       title: 'Defina as Suas Próprias Tarifas',
-      description: 'Você decide quanto vale o seu tempo. Mantenha 80% dos seus ganhos e receba pagamentos semanais através de processamento seguro.',
+      description:
+        'Você decide quanto vale o seu tempo. Mantenha 80% dos seus ganhos e receba pagamentos semanais através de processamento seguro.',
     },
     {
       icon: 'calendar',
       title: 'Horário Flexível',
-      description: 'Controle completamente o seu calendário. Trabalhe tanto ou tão pouco quanto quiser, quando quiser.',
+      description:
+        'Controle completamente o seu calendário. Trabalhe tanto ou tão pouco quanto quiser, quando quiser.',
     },
     {
       icon: 'video',
       title: 'Videoconsultas Seguras',
-      description: 'Realize sessões de qualquer lugar na nossa plataforma encriptada e conforme com RGPD. Tudo o que precisa é de um computador e ligação à internet.',
+      description:
+        'Realize sessões de qualquer lugar na nossa plataforma encriptada e conforme com RGPD. Tudo o que precisa é de um computador e ligação à internet.',
     },
     {
       icon: 'users',
       title: 'Alcance Mais Clientes',
-      description: 'Seja descoberto por clientes que procuram serviços de saúde feminina através da nossa plataforma. Concentre-se nos cuidados, não em marketing.',
+      description:
+        'Seja descoberto por clientes que procuram serviços de saúde feminina através da nossa plataforma. Concentre-se nos cuidados, não em marketing.',
     },
     {
       icon: 'trending',
       title: 'Ferramentas Profissionais',
-      description: 'Gestão de clientes, faturação automática, páginas de reserva e análises—tudo o que precisa para gerir a sua prática independente.',
+      description:
+        'Gestão de clientes, faturação automática, páginas de reserva e análises—tudo o que precisa para gerir a sua prática independente.',
     },
   ]}
 />
@@ -67,24 +75,27 @@ import { Sparkles, TrendingUp } from 'lucide-react';
   steps={[
     {
       title: 'Crie o Seu Perfil',
-      description: 'Partilhe a sua experiência, credenciais e disponibilidade. Diga aos clientes o que o torna único.',
+      description:
+        'Partilhe a sua experiência, credenciais e disponibilidade. Diga aos clientes o que o torna único.',
     },
     {
       title: 'Defina os Seus Serviços e Tarifas',
-      description: 'Defina as suas ofertas e preços. Você tem controlo completo sobre o seu negócio.',
+      description:
+        'Defina as suas ofertas e preços. Você tem controlo completo sobre o seu negócio.',
     },
     {
       title: 'Seja Descoberto',
-      description: 'Os clientes encontram-no através de pesquisas e recomendações. Comece a receber pedidos de reserva.',
+      description:
+        'Os clientes encontram-no através de pesquisas e recomendações. Comece a receber pedidos de reserva.',
     },
     {
       title: 'Forneça o Seu Serviço',
-      description: 'Realize sessões, ajude os clientes a alcançar os seus objetivos e construa a sua reputação através de avaliações.',
+      description:
+        'Realize sessões, ajude os clientes a alcançar os seus objetivos e construa a sua reputação através de avaliações.',
     },
   ]}
   ctaButton="Comece a Sua Jornada"
 />
-
 
 <ExpertPricingSection
   title="Preços Flexíveis para Cada Especialista"
@@ -239,29 +250,32 @@ import { Sparkles, TrendingUp } from 'lucide-react';
   note="Cancele ou mude de plano a qualquer momento. Não são necessários contratos de longo prazo. Todos os planos incluem suporte da plataforma, processamento seguro de pagamentos e ferramentas de gestão de clientes."
 />
 
-
 <RequirementsSection
   title="Requisitos para Aderir"
   requirements={[
     {
       icon: 'badge',
       title: 'Licença Profissional Válida',
-      description: 'Licença ou certificação ativa na sua área de saúde. Autocertifica as suas credenciais e é responsável pelo seu estatuto profissional.',
+      description:
+        'Licença ou certificação ativa na sua área de saúde. Autocertifica as suas credenciais e é responsável pelo seu estatuto profissional.',
     },
     {
       icon: 'shield',
       title: 'Seguro de Responsabilidade Profissional',
-      description: 'Cobertura de responsabilidade civil profissional ou negligência médica adequada à sua área de prática.',
+      description:
+        'Cobertura de responsabilidade civil profissional ou negligência médica adequada à sua área de prática.',
     },
     {
       icon: 'globe',
       title: 'Internet e Equipamento Fiável',
-      description: 'Ligação à internet estável e ambiente adequado para videoconsultas profissionais.',
+      description:
+        'Ligação à internet estável e ambiente adequado para videoconsultas profissionais.',
     },
     {
       icon: 'heart',
       title: 'Compromisso com a Qualidade',
-      description: 'Dedicação a práticas baseadas em evidência e a prestar cuidados de excelência aos seus clientes.',
+      description:
+        'Dedicação a práticas baseadas em evidência e a prestar cuidados de excelência aos seus clientes.',
     },
   ]}
 />
