--- a/src/content/for-organizations/en.mdx
+++ b/src/content/for-organizations/en.mdx
@@ -262,23 +262,28 @@ import WhoCanJoinSection from '@/components/sections/for-organizations/WhoCanJoi
   faq={[
     {
       question: 'Can I switch plans at any time?',
-      answer: 'Yes! You can upgrade or downgrade your plan at any time. When upgrading, you will be charged the prorated difference. When downgrading, the credit will be applied to your next billing cycle.',
+      answer:
+        'Yes! You can upgrade or downgrade your plan at any time. When upgrading, you will be charged the prorated difference. When downgrading, the credit will be applied to your next billing cycle.',
     },
     {
       question: "What's included in the platform fee?",
-      answer: 'The platform fee covers the technology infrastructure including scheduling, secure video consultations, payment processing, analytics, and client management tools. There are no hidden fees.',
+      answer:
+        'The platform fee covers the technology infrastructure including scheduling, secure video consultations, payment processing, analytics, and client management tools. There are no hidden fees.',
     },
     {
       question: 'How does the revenue share model work?',
-      answer: 'Eleva Care takes an 8-15% commission on each expert booking made through the platform. This covers payment processing, platform maintenance, and support. Experts always keep at least 60% of their booking fees.',
+      answer:
+        'Eleva Care takes an 8-15% commission on each expert booking made through the platform. This covers payment processing, platform maintenance, and support. Experts always keep at least 60% of their booking fees.',
     },
     {
       question: 'Can I add more experts than my plan allows?',
-      answer: 'You can upgrade to a higher plan at any time to add more experts. For organizations needing more than 10 experts, our Enterprise plan offers unlimited seats with custom pricing.',
+      answer:
+        'You can upgrade to a higher plan at any time to add more experts. For organizations needing more than 10 experts, our Enterprise plan offers unlimited seats with custom pricing.',
     },
     {
       question: 'Is there a free trial available?',
-      answer: 'We offer a personalized demo and onboarding experience. Contact our team to discuss your needs and explore how Eleva Care can work for your organization.',
+      answer:
+        'We offer a personalized demo and onboarding experience. Contact our team to discuss your needs and explore how Eleva Care can work for your organization.',
     },
   ]}
 />
