--- a/src/content/for-organizations/pt-BR.mdx
+++ b/src/content/for-organizations/pt-BR.mdx
@@ -10,9 +10,9 @@ export const metadata = {
   },
 };
 
+import { Button } from '@/components/ui/button';
 import { ArrowRight, Sparkles } from 'lucide-react';
 import Link from 'next/link';
-import { Button } from '@/components/ui/button';
 
 import BenefitsSection from '@/components/sections/for-organizations/BenefitsSection';
 import FinalCTASection from '@/components/sections/for-organizations/FinalCTASection';
@@ -263,23 +263,28 @@ import WhoCanJoinSection from '@/components/sections/for-organizations/WhoCanJoi
   faq={[
     {
       question: 'Posso mudar de plano a qualquer momento?',
-      answer: 'Sim! Você pode fazer upgrade ou downgrade do seu plano a qualquer momento. No upgrade, será cobrada a diferença proporcional. No downgrade, o crédito será aplicado ao próximo ciclo de faturamento.',
+      answer:
+        'Sim! Você pode fazer upgrade ou downgrade do seu plano a qualquer momento. No upgrade, será cobrada a diferença proporcional. No downgrade, o crédito será aplicado ao próximo ciclo de faturamento.',
     },
     {
       question: 'O que está incluído na taxa da plataforma?',
-      answer: 'A taxa da plataforma cobre a infraestrutura tecnológica incluindo agendamento, videoconsultas seguras, processamento de pagamentos, análises e ferramentas de gestão de clientes. Não há taxas ocultas.',
+      answer:
+        'A taxa da plataforma cobre a infraestrutura tecnológica incluindo agendamento, videoconsultas seguras, processamento de pagamentos, análises e ferramentas de gestão de clientes. Não há taxas ocultas.',
     },
     {
       question: 'Como funciona o modelo de compartilhamento de receitas?',
-      answer: 'A Eleva Care cobra uma comissão de 8-15% em cada reserva de especialista realizada pela plataforma. Isso cobre o processamento de pagamentos, manutenção da plataforma e suporte. Os especialistas sempre mantêm pelo menos 60% das suas tarifas de reserva.',
+      answer:
+        'A Eleva Care cobra uma comissão de 8-15% em cada reserva de especialista realizada pela plataforma. Isso cobre o processamento de pagamentos, manutenção da plataforma e suporte. Os especialistas sempre mantêm pelo menos 60% das suas tarifas de reserva.',
     },
     {
       question: 'Posso adicionar mais especialistas do que o meu plano permite?',
-      answer: 'Você pode fazer upgrade para um plano superior a qualquer momento para adicionar mais especialistas. Para organizações que precisem de mais de 10 especialistas, nosso plano Enterprise oferece vagas ilimitadas com preços personalizados.',
+      answer:
+        'Você pode fazer upgrade para um plano superior a qualquer momento para adicionar mais especialistas. Para organizações que precisem de mais de 10 especialistas, nosso plano Enterprise oferece vagas ilimitadas com preços personalizados.',
     },
     {
       question: 'Existe um período de teste gratuito?',
-      answer: 'Oferecemos uma demonstração personalizada e experiência de integração. Entre em contato com nossa equipe para discutir suas necessidades e explorar como a Eleva Care pode funcionar para sua organização.',
+      answer:
+        'Oferecemos uma demonstração personalizada e experiência de integração. Entre em contato com nossa equipe para discutir suas necessidades e explorar como a Eleva Care pode funcionar para sua organização.',
     },
   ]}
 />
