--- a/src/content/for-organizations/pt.mdx
+++ b/src/content/for-organizations/pt.mdx
@@ -263,23 +263,28 @@ import WhoCanJoinSection from '@/components/sections/for-organizations/WhoCanJoi
   faq={[
     {
       question: 'Posso mudar de plano a qualquer momento?',
-      answer: 'Sim! Pode fazer upgrade ou downgrade do seu plano a qualquer momento. No upgrade, será cobrada a diferença proporcional. No downgrade, o crédito será aplicado ao próximo ciclo de faturação.',
+      answer:
+        'Sim! Pode fazer upgrade ou downgrade do seu plano a qualquer momento. No upgrade, será cobrada a diferença proporcional. No downgrade, o crédito será aplicado ao próximo ciclo de faturação.',
     },
     {
       question: 'O que está incluído na taxa da plataforma?',
-      answer: 'A taxa da plataforma cobre a infraestrutura tecnológica incluindo agendamento, videoconsultas seguras, processamento de pagamentos, análises e ferramentas de gestão de clientes. Não há taxas ocultas.',
+      answer:
+        'A taxa da plataforma cobre a infraestrutura tecnológica incluindo agendamento, videoconsultas seguras, processamento de pagamentos, análises e ferramentas de gestão de clientes. Não há taxas ocultas.',
     },
     {
       question: 'Como funciona o modelo de partilha de receitas?',
-      answer: 'A Eleva Care cobra uma comissão de 8-15% em cada reserva de especialista realizada através da plataforma. Isto cobre o processamento de pagamentos, manutenção da plataforma e suporte. Os especialistas mantêm sempre pelo menos 60% das suas tarifas de reserva.',
+      answer:
+        'A Eleva Care cobra uma comissão de 8-15% em cada reserva de especialista realizada através da plataforma. Isto cobre o processamento de pagamentos, manutenção da plataforma e suporte. Os especialistas mantêm sempre pelo menos 60% das suas tarifas de reserva.',
     },
     {
       question: 'Posso adicionar mais especialistas do que o meu plano permite?',
-      answer: 'Pode fazer upgrade para um plano superior a qualquer momento para adicionar mais especialistas. Para organizações que precisem de mais de 10 especialistas, o nosso plano Enterprise oferece lugares ilimitados com preços personalizados.',
+      answer:
+        'Pode fazer upgrade para um plano superior a qualquer momento para adicionar mais especialistas. Para organizações que precisem de mais de 10 especialistas, o nosso plano Enterprise oferece lugares ilimitados com preços personalizados.',
     },
     {
       question: 'Existe um período de teste gratuito?',
-      answer: 'Oferecemos uma demonstração personalizada e experiência de integração. Contacte a nossa equipa para discutir as suas necessidades e explorar como a Eleva Care pode funcionar para a sua organização.',
+      answer:
+        'Oferecemos uma demonstração personalizada e experiência de integração. Contacte a nossa equipa para discutir as suas necessidades e explorar como a Eleva Care pode funcionar para a sua organização.',
     },
   ]}
 />
